--- a/src/assets/common.less
+++ b/src/assets/common.less
@@ -1,30 +1,42 @@
 @import "./base.less";
 
 body {
-  font: 14px/1.6 Arial, "Microsoft YaHei", "黑体", "宋体", sans-serif;
+  font: 14px/1.6 Arial,"Microsoft YaHei","黑体","宋体",sans-serif;
   color: #333;
   margin: 0;
 }
 
-html,
-body,
-#app {
+html, body, #app {
   height: 100%;
 }
+
+
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+.pagination {
+  display: grid;
+  justify-items: center;
+  margin-bottom: 30px;
+}
+
 
 .el-button {
   color: @themeColor;
   border: 1px solid @themeLighterColor;
-  background: none;
-  border-radius: 4px;
+  background: #fff;
+  border-radius: 4px;  
 }
 
-.el-button.el-button--medium {
+.el-button.el-button--medium{
   font-size: 13px;
   padding: 0 8px;
   font-weight: normal;
   line-height: 28px;
 }
+
 
 .el-button:hover {
   color: #fff;
@@ -42,8 +54,6 @@ input:focus {
   border-color: @themeLighterColor;
 }
 
-.el-input.is-active .el-input__inner,
-.el-input__inner:focus,
-.el-textarea__inner:focus {
+.el-input.is-active .el-input__inner, .el-input__inner:focus, .el-textarea__inner:focus {
   border-color: @themeLighterColor;
 }
